updated na css nalang